k8s/project2-patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2patient-deployment
  labels:
    app: project2patient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project2patient
  template:
    metadata:
      labels:
        app: project2patient
    spec:
      containers:
        - image: joseb89/project2patientapi:latest
          name: project2patient
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: project2patient-service
spec:
  selector:
    app: project2patient
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30002
