k8s/project2-pharmacy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2pharmacy-deployment
  labels:
    app: project2pharmacy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project2pharmacy
  template:
    metadata:
      labels:
        app: project2pharmacy
    spec:
      containers:
        - image: joseb89/project2pharmacyapi:latest
          name: project2pharmacy
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: project2pharmacy-service
spec:
  selector:
    app: project2pharmacy
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
      nodePort: 30004
